overflow: hidden; added to styling of upper-sidenav, fixing visual glitch

--- a/src/app/car-selector/car-selector.component.css
+++ b/src/app/car-selector/car-selector.component.css
@@ -9,6 +9,7 @@
     height: 200px;
     margin: auto;
     padding: 10px;
+    overflow: hidden;
  }
 
 .upper-sidenav {
@@ -19,6 +20,7 @@
     margin: auto;
     padding: 10px;
     background-color: white;
+    overflow: hidden;
  }
 
 .upper-menu {
@@ -28,6 +30,7 @@
     left: 0px;
     width: 560px;
     height: 200px;
+    overflow: hidden;
  }
 
 /* Lower sidenav contains the listElements */
@@ -65,7 +68,6 @@
     left: 560px;
     width: 100%;
     height: 100%;
-    background-color: red;
 }
 
 .text-input {
